Issue #1789696 by bojanz: adding padding to shortcut icon to align with title

--- a/scss/shiny.scss
+++ b/scss/shiny.scss
@@ -411,6 +411,10 @@ a.tabledrag-handle .handle {
 }
 #overlay-titlebar {
   @include round-corners(4px,4px,0,0);
+
+  .add-or-remove-shortcuts {
+    padding-top: 31px;
+  }
 }
 h1#overlay-title {
   color: #000000;
